# MARS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: README.md  config.toml
apps/: README.md  __init__.py
apps/api/: __init__.py  main.py  schemas.py  service_adapters.py
apps/dashboard/: __init__.py  api_client.py  app.py  demo_data.py  styles.css
apps/simulator/: __init__.py  main.py
apps/worker/: __init__.py  main.py
artifacts/: README.md
configs/: README.md  config.yaml
data/: README.md
docs/: README.md  api.md  architecture.md  code_traceability.md  evaluation_report.md  runtime_bundle_guide.md  submission_note.md
logs/: README.md
scripts/: README.md  __init__.py  run_mars.sh
scripts/artifacts/: __init__.py  build_artifacts.py  build_clean_hm_catalog_50k.py  build_hm_products_master.py  build_search_behavior_model.py  build_search_feedback_dataset.py  rebuild_search_faiss_indexes.py  rebuild_search_text_artifacts.py  refresh_search_behavior_model.py
scripts/checks/: __init__.py  perf_benchmark.py  smoke_api.py
scripts/dashboard/: generate_guide_images.py
scripts/evaluation/: __init__.py  evaluate_required_scale.py
scripts/packaging/: __init__.py  (+1 more)
src/: README.md
tests/: README.md  conftest.py  test_api_contract.py  test_api_hot_reload.py  test_api_search_schema.py  test_dashboard_client.py  test_live_log_reset.py  test_live_simulator_loop.py  test_recommendation.py  test_search_agent3.py  test_search_continuous_learning.py  test_simulator.py
(+47 files in other folders)
