[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-capstone"
version = "0.1.0"
description = "MARS multimodal search and multi-stage recommendation capstone system"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "PyYAML>=6.0",
  "redis>=5.0",
  "httpx>=0.27",
  "streamlit>=1.55",
  "plotly>=5.24",
  "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML>=6.0",
]
ml = [
  "torch>=2.3",
  "torchvision>=0.18",
  "transformers>=4.44",
  "faiss-cpu>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mars*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"apps/dashboard/app.py" = ["E501"]
"scripts/**/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
